@@ -1,3 +1,8 @@
+2010-01-11 Borut Razem <borut.razem AT siol.net>
+
+	* configure.in, configure, Makefile.in, sdcc.dsw:
+	  sdas/aslink renamed to sdas/linksrc
+
 2009-01-10 Raphael Neider <rneider AT web.de>
 
 	* src/pic/gen.c (genCmp): do not clobber CARRY when storing the
